@@ -1,3 +1,7 @@
+2011-01-26  John W. Eaton  <jwe@octave.org>
+
+	* general/curl.m: Simplify processing of outptut values.
+
 2011-01-26  Olaf Till  <olaf.till@uni-jena.de>
 
 	* pkg/pkg.m: Export environment variables MKOCTFILE and
